# dsrp_ml_1

./: LICENSE  Makefile  README.md  pyproject.toml
data/: WHR_preprocesado.joblib
docs/: happiness_ml_project.md  mkdocs.yml
docs/docs/: getting-started.md  index.md
dsrp_ml_1/: __init__.py  dataset.py  features.py  plots.py  utils.py
dsrp_ml_1/modeling/: predict.py  train.py
models/: LinearRegression.joblib
notebooks/: AnálisisDatos.ipynb  Clustering.ipynb  Preprocesamiento.ipynb  Regresion.ipynb
