[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dsrp_ml_1"
version = "0.0.1"
description = "Entender conceptos de Machine Learning, ecosistema y tecnolog\u00edas, adem\u00e1s de algoritmos cl\u00e1sicos."
authors = [
  { name = "Edynson_Coronado_Icochea" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "jupyterlab>=4.4.3",
    "loguru",
    "matplotlib>=3.10.3",
    "mkdocs",
    "numpy>=2.3.0",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["dsrp_ml_1"]
include = ["pyproject.toml", "dsrp_ml_1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["dsrp_ml_1"]
force-sort-within-sections = true

